--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,9 @@
 platform = espressif8266
 board = d1_mini
 framework = arduino
+monitor_speed = 115200
+upload_speed = 460800
+lib_deps = 
+	tzapu/WiFiManager@^0.16.0
+	knolleary/PubSubClient@^2.8
+board_build.filesystem = littlefs
